--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8"><title><%= title %></title>    
+    <meta charset="utf-8"><title> Preguntas </title>    
 	<link rel='stylesheet' href='/stylesheets/style.css' />
 	<link rel='stylesheet' 
 	      type='text/css'
@@ -14,19 +14,20 @@
   </head>
   <body>
     <div id="page-warp">
-    <header class="main" id="h1">
-    	<h2>Quiz: el juego de las preguntas</h2>
-    </header>
-    <nav class="main" if="n1" role="navigation">
-    	<span><a href="/">Inicio</a></span>
-    	<span><a href="/quizes/question">Preguntas</a></span>
-    </nav>
-    <section class="main" id="s1">
-    	<%= body %>
-    </section>
-    <footer class="main" id="f1">
-    	<a href="http://es.wikipedia.org/wiki/Quiz">Que es un quiz</a>
-    </footer>
+	    <header class="main" id="h1">
+	    	<h2>Quiz: el juego de las preguntas</h2>
+	    </header>
+	    <nav class="main" if="n1" role="navigation">
+	    	<span><a href="/">Inicio</a></span>
+	    	<span><a href="/quizes/question">Preguntas</a></span>
+	    	<span><a href="/author">Créditos</a></span>
+	    </nav>
+	    <section class="main" id="s1">
+	    	<div><%- body %></div>
+	    </section>
+	    <footer class="main" id="f1">Enlace al código descargable en GitHub:
+	    	<a href="https://github.com/juaniniguez/quiz">https://github.com/juaniniguez/quiz</a>
+	    </footer>
  	</div>
   </body>
 </html>
